<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Developer Widget</string>
  <string name="install_apk">Install APK</string>
  <string name="app_settings">Manage Apps</string>
  <string name="ok">OK</string>
  <string name="cancel">Cancel</string>
  <string name="missing_permissions">Missing permissions</string>
  <string name="no_apk_found">No APK files found</string>
  <string name="no_apk_found_search_depth">search depth %d</string>
  <string name="no_apps_found">No apps found</string>
  <string name="loading_data">Loading data…</string>
  <string name="filter">Filter</string>
  <string name="filter_hint">Filter package name…</string>
  <string name="delete">Delete</string>
  <string name="clear">Clear selection</string>
  <string name="scanning_apks">Searching APK files…</string>
  <string name="message_delete_single">Delete selected APK file?</string>
  <string name="message_delete_multi">Delete %s selected APK files?</string>
  <string name="developer_settings">Developer Settings</string>
  <string name="language_settings">Language Settings</string>
  <string name="add_widget">Add developer widget</string>
  <string name="create_widget">Create developer widget</string>
  <string name="update_widget">Update developer widget</string>
  <string name="subtitle">Android %1$s | API Level %2$s</string>
  <string name="apk_version">%1$s (%2$s)</string>
  <string name="app_version">Version %s</string>
  <string name="app_description">A modern design, open source toolset for Android Developers.</string>
  <string name="about">About</string>
  <string name="create_shortcut">Create shortcut</string>
  <string name="shortcut_error">Error launching the shortcut.</string>
  <string name="privacy_policy">Privacy Policy</string>
  <string name="license">License</string>
  <string name="mit_license">MIT-License</string>
  <string name="source_code">Source code</string>
  <string name="changelog">Release notes</string>
  <string name="feedback">Feedback</string>
  <string name="feedback_description">Request features or report bugs</string>
  <string name="search_apk_depth">APK search depth</string>
  <string name="show_app_icon">Show app icon</string>
  <string name="show_app_icon_description">Display application icon on launcher</string>
  <string name="reboot_notice">You may need to reboot to take effect.</string>
  <string name="send_feedback">Contact me</string>
  <string name="github_issue">Open Github issue</string>
  <string name="send_mail">Send email</string>
  <string name="open_source_licenses">Open source licenses</string>
  <string name="open_source_licenses_description">License details for open source software</string>
  <string name="build_number">Build version</string>
  <string name="author">Author</string>
  <string name="twitter">Twitter</string>
  <string name="twitter_username">mr_G00fY2</string>
  <string name="github">Github</string>
  <string name="github_username">G00fY2</string>
  <string name="licenses">Third Party Licenses</string>
  <string name="icon_credits">Icon credits</string>
  <string name="icon_credits_description">Attribution to the authors of the used icons</string>
  <string name="app_theme">App theme</string>
  <string name="night_mode">Night mode</string>
  <string name="day_mode">Day mode</string>
  <string name="auto_mode">Auto mode</string>
  <string name="app_icon">App icon</string>
  <string name="access_file_fail">Could not access the file.</string>
  <string name="show_all_apps">Show all %s apps</string>
  <string name="show_all">Show all</string>
  <string name="manually_add_widget">You have to manually add a new widget using your launcher.</string>
  <string name="day_night_issue">You may need to restart the app to fully take effect.</string>
  <string name="share_device_data">Share device data</string>
  <string name="apk_warning_title">Potentially harmful app</string>
  <string name="apk_warning_description">This app contains code that attempts to bypass Android\'s security protections.</string>
  <string name="apk_warning_list_title">Permissions without runtime request:</string>
  <string name="keep_me_safe">Keep me safe</string>
  <string name="install_anyway">Install anyway</string>
  <string name="infinite_depth">Infinite (can slow down APK search)</string>
  <string name="default_depth">%d (Default)</string>

  <string name="device_title">Device</string>
  <string name="system_title">System</string>
  <string name="cpu_title">CPU</string>
  <string name="memory_title">Memory</string>
  <string name="display_title">Display</string>
  <string name="features_title">Features</string>
  <string name="software_title">Software</string>

  <string name="board">Board</string>
  <string name="device">Device</string>
  <string name="hardware">Hardware</string>
  <string name="product">Product</string>
  <string name="model">Model</string>
  <string name="manufacture">Manufacture</string>
  <string name="device_name">Device Name</string>
  <string name="bootloader">Bootloader</string>
  <string name="id">ID</string>
  <string name="abi">ABI</string>
  <string name="codename">Codename</string>
  <string name="preview_sdk">Preview SDK</string>
  <string name="security_patch_level">Security Patch Level</string>
  <string name="release">Android</string>
  <string name="sdk">API Level</string>
  <string name="vm_version">VM Version</string>
  <string name="kernel">Kernel</string>
  <string name="nfc">NFC</string>
  <string name="gps">GPS</string>
  <string name="bluetooth">Bluetooth</string>
  <string name="low_ram_flag">Low Ram device</string>
  <string name="resolution">Resolution</string>
  <string name="ratio">Ratio</string>
  <string name="dpi">xdpi / ydpi</string>
  <string name="ram">Ram</string>
  <string name="cpu_cores">CPU cores</string>
  <string name="cpu_frequencies">CPU Freq</string>
  <string name="google_play_version">Google Play Service Version</string>
  <string name="webview_implementation">WebView Implementation</string>
</resources>
