<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:paddingBottom="6dp"
    >

  <TextView
      android:id="@+id/titleView"
      android:layout_width="wrap_content"
      android:layout_height="48dp"
      android:layout_marginLeft="16dp"
      android:layout_marginStart="16dp"
      android:gravity="start|bottom"
      android:paddingBottom="6dp"
      android:text="@string/send_feedback"
      android:textSize="20sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      style="@style/TextAppearance.AppCompat.Title"
      />

  <TextView
      android:id="@+id/mailTextView"
      android:layout_width="0dp"
      android:layout_height="48dp"
      android:background="?android:attr/selectableItemBackground"
      android:gravity="start|center_vertical"
      android:paddingEnd="16dp"
      android:paddingLeft="16dp"
      android:paddingRight="16dp"
      android:paddingStart="16dp"
      android:text="@string/send_mail"
      android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/titleView"
      />
  <TextView
      android:id="@+id/githubTextView"
      android:layout_width="0dp"
      android:layout_height="48dp"
      android:background="?android:attr/selectableItemBackground"
      android:gravity="start|center_vertical"
      android:paddingEnd="16dp"
      android:paddingLeft="16dp"
      android:paddingRight="16dp"
      android:paddingStart="16dp"
      android:text="@string/github_issue"
      android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/mailTextView"
      />

</androidx.constraintlayout.widget.ConstraintLayout>