<!--suppress AndroidLintNestedWeights, AndroidLintSpUsage -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_widget_outer_shape"
    android:baselineAligned="false"
    android:orientation="horizontal"
    tools:ignore="ContentDescription"
    >

  <LinearLayout
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_marginBottom="4dp"
      android:layout_marginLeft="4dp"
      android:layout_marginRight="4dp"
      android:layout_marginTop="4dp"
      android:layout_weight="1"
      android:background="@drawable/bg_widget_inner_shape"
      android:gravity="center_vertical"
      android:orientation="vertical"
      android:paddingBottom="4dp"
      android:paddingLeft="8dp"
      android:paddingRight="8dp"
      android:paddingTop="4dp"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:alpha="0.5"
        android:gravity="center_vertical"
        android:text="@string/loading_data"
        android:textColor="@color/widgetTextColor"
        android:textSize="16dp"
        style="@style/TextAppearance.AppCompat.Title"
        />
  </LinearLayout>

  <LinearLayout
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_marginBottom="4dp"
      android:layout_marginTop="4dp"
      android:layout_weight="1"
      android:background="@drawable/bg_widget_inner_shape"
      android:orientation="vertical"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:alpha="0.5"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        tools:ignore="UseCompoundDrawables"
        >
      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/ic_apps_grid"
          android:tint="@color/vectorTintColor"
          />
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="8dp"
          android:layout_marginRight="8dp"
          android:enabled="false"
          android:text="@string/app_settings"
          android:textColor="@color/widgetTextColor"
          style="@style/TextAppearance.AppCompat.Subhead"
          />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:alpha="0.5"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        tools:ignore="UseCompoundDrawables"
        >
      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/ic_apps"
          android:tint="@color/vectorTintColor"
          />
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="8dp"
          android:layout_marginRight="8dp"
          android:text="@string/install_apk"
          android:textColor="@color/widgetTextColor"
          style="@style/TextAppearance.AppCompat.Subhead"
          />
    </LinearLayout>
  </LinearLayout>
</LinearLayout>